# voci

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: 01-architecture.md  02-podcast-scraper.md  03-pass1-asr.md  04-pass2-paralinguistics.md  05-annotation-guide.md  06-dataset-format.md  07-quality-control.md  08-hardware-setup.md
scripts/: convert_pipeline.py  convert_single_model.py  diverse_download.py  live_monitor.sh  mimi_test.py  monitor.py  monitor_fast.sh  parallel_download.py  reprocess_demucs.py  start_spark2.sh  start_workers.sh  status.sh
src/scraper/: apple.py  cli.py  db.py  podcast_index.py  rss.py  spreaker.py
